--- a/project/public/index.html
+++ b/project/public/index.html
@@ -9,6 +9,11 @@
         <link rel="stylesheet" href="css/index.css" />
         <title><%= htmlWebpackPlugin.options.title %></title>
     </head>
+    <script
+    src="https://code.jquery.com/jquery-3.6.3.min.js"
+    integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
+    crossorigin="anonymous"
+></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <body>
         <noscript>
