--- a/project/public/index.html
+++ b/project/public/index.html
@@ -16,6 +16,7 @@
     ></script>
     <script src="js/contact.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+    <script src="js/swiper.js"></script>
     <body>
         <noscript>
             <strong
